Fix list title width on mobile

--- a/src/css/include/header.styl
+++ b/src/css/include/header.styl
@@ -18,6 +18,7 @@ header
 
   .header-left
     margin 2px 0 0 10px
+    width 50%
     
     img
       margin-right 5px
@@ -37,7 +38,8 @@ header
   font-size font-large
   outline none
   padding 2px 5px
-  width auto
+  text-overflow ellipsis
+  width 75%
   
   &:hover, &:focus
     background dark-primary
